Add seal quality and spell scaling